parser is now more relaxed with CSECT and START entries, location operands are silently ignored

--- a/doc/todo
+++ b/doc/todo
@@ -1,6 +1,6 @@
 * update the M records to reflect the symbol and operation
 * update the M records to reflect the true length of the operands
-* implement R and D records
+* implement R and D records (done)
 * implement ORG, LTORG
 * implement literals (especially ones with * EQU)
-* implement EXTREF & EXTDEF
+* implement EXTREF & EXTDEF (done)
